syntax = "proto3";

package room;

option go_package = "gitlab.haochang.tv/gopkg/nodehub/example/chat/proto/roompb";

enum Protocol {
	UNSPECIFIED = 0;
	NEWS = 1;
}

message JoinRequest {
	string name = 1;
}

message SayRequest {
	string to = 1;
	string content = 2;
}

message News {
	string from_id = 1;
	string from_name = 2;
	string content = 3;
}
